@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -47,12 +47,12 @@ import org.openhab.binding.bluetooth.TestUtils;
 import org.openhab.binding.bluetooth.discovery.BluetoothDiscoveryDevice;
 import org.openhab.binding.bluetooth.discovery.BluetoothDiscoveryParticipant;
 import org.openhab.binding.bluetooth.notification.BluetoothConnectionStatusNotification;
-import org.openhab.binding.bluetooth.util.StringUtil;
 import org.openhab.core.config.discovery.DiscoveryListener;
 import org.openhab.core.config.discovery.DiscoveryResult;
 import org.openhab.core.config.discovery.DiscoveryResultBuilder;
 import org.openhab.core.thing.ThingTypeUID;
 import org.openhab.core.thing.ThingUID;
+import org.openhab.core.util.StringUtils;
 
 /**
  * Tests {@link BluetoothDiscoveryService}.
@@ -196,7 +196,7 @@ public class BluetoothDiscoveryServiceTest {
 
         MockBluetoothAdapter mockAdapter1 = new MockBluetoothAdapter();
         MockBluetoothDevice mockDevice = mockAdapter1.getDevice(address);
-        String deviceName = StringUtil.randomAlphanummeric(10);
+        String deviceName = StringUtils.getRandomAlphanumeric(10);
         mockDevice.setDeviceName(deviceName);
 
         BluetoothDevice device = Mockito.spy(mockDevice);
@@ -223,7 +223,7 @@ public class BluetoothDiscoveryServiceTest {
         MockBluetoothAdapter mockAdapter2 = new MockBluetoothAdapter();
         MockBluetoothDevice mockDevice1 = mockAdapter1.getDevice(address);
         MockBluetoothDevice mockDevice2 = mockAdapter2.getDevice(address);
-        String deviceName = StringUtil.randomAlphanummeric(10);
+        String deviceName = StringUtils.getRandomAlphanumeric(10);
         mockDevice1.setDeviceName(deviceName);
         mockDevice2.setDeviceName(deviceName);
 
@@ -261,7 +261,7 @@ public class BluetoothDiscoveryServiceTest {
     public void nonConnectionParticipantTest() {
         MockBluetoothAdapter mockAdapter1 = new MockBluetoothAdapter();
         MockBluetoothDevice mockDevice = mockAdapter1.getDevice(TestUtils.randomAddress());
-        String deviceName = StringUtil.randomAlphanummeric(10);
+        String deviceName = StringUtils.getRandomAlphanumeric(10);
         mockDevice.setDeviceName(deviceName);
 
         BluetoothDevice device = Mockito.spy(mockDevice);
@@ -418,7 +418,7 @@ public class BluetoothDiscoveryServiceTest {
         MockBluetoothAdapter mockAdapter2 = new MockBluetoothAdapter();
         MockBluetoothDevice mockDevice1 = mockAdapter1.getDevice(address);
         MockBluetoothDevice mockDevice2 = mockAdapter2.getDevice(address);
-        String deviceName = StringUtil.randomAlphanummeric(10);
+        String deviceName = StringUtils.getRandomAlphanumeric(10);
 
         MockDiscoveryParticipant participant2 = new MockDiscoveryParticipant() {
             @Override
@@ -534,30 +534,30 @@ public class BluetoothDiscoveryServiceTest {
         private ThingTypeUID typeUID;
 
         public MockDiscoveryParticipant() {
-            this.typeUID = new ThingTypeUID(BluetoothBindingConstants.BINDING_ID, StringUtil.randomAlphabetic(6));
+            this.typeUID = new ThingTypeUID(BluetoothBindingConstants.BINDING_ID, StringUtils.getRandomAlphabetic(6));
         }
 
         @Override
         public Set<ThingTypeUID> getSupportedThingTypeUIDs() {
-            return Collections.singleton(typeUID);
+            return Set.of(typeUID);
         }
 
         @Override
         public @Nullable DiscoveryResult createResult(BluetoothDiscoveryDevice device) {
-            String repProp = StringUtil.randomAlphabetic(6);
+            String repProp = StringUtils.getRandomAlphabetic(6);
             ThingUID thingUID = getThingUID(device);
             if (thingUID == null) {
                 return null;
             }
-            return DiscoveryResultBuilder.create(thingUID).withLabel(StringUtil.randomAlphabetic(6))
-                    .withProperty(repProp, StringUtil.randomAlphabetic(6)).withRepresentationProperty(repProp)
+            return DiscoveryResultBuilder.create(thingUID).withLabel(StringUtils.getRandomAlphabetic(6))
+                    .withProperty(repProp, StringUtils.getRandomAlphabetic(6)).withRepresentationProperty(repProp)
                     .withBridge(device.getAdapter().getUID()).build();
         }
 
         @Override
         public @Nullable ThingUID getThingUID(BluetoothDiscoveryDevice device) {
             String deviceName = device.getName();
-            String id = deviceName != null ? deviceName : StringUtil.randomAlphabetic(6);
+            String id = deviceName != null ? deviceName : StringUtils.getRandomAlphabetic(6);
             return new ThingUID(typeUID, device.getAdapter().getUID(), id);
         }
     }
