@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,6 @@ package org.openhab.binding.dmx.internal.handler;
 import static org.openhab.binding.dmx.internal.DmxBindingConstants.*;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.IntStream;
@@ -52,7 +51,7 @@ import org.slf4j.LoggerFactory;
  */
 
 public class DimmerThingHandler extends DmxThingHandler {
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_DIMMER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_DIMMER);
 
     private final Logger logger = LoggerFactory.getLogger(DimmerThingHandler.class);
 
@@ -79,13 +78,13 @@ public class DimmerThingHandler extends DmxThingHandler {
         switch (channelUID.getId()) {
             case CHANNEL_BRIGHTNESS: {
                 if (command instanceof PercentType || command instanceof DecimalType) {
-                    PercentType brightness = (command instanceof PercentType) ? (PercentType) command
+                    PercentType brightness = (command instanceof PercentType percentCommand) ? percentCommand
                             : Util.toPercentValue(((DecimalType) command).intValue());
                     logger.trace("adding fade to channels in thing {}", this.thing.getUID());
                     targetValueSet.addValue(brightness);
-                } else if (command instanceof OnOffType) {
+                } else if (command instanceof OnOffType onOffCommand) {
                     logger.trace("adding {} fade to channels in thing {}", command, this.thing.getUID());
-                    if (((OnOffType) command) == OnOffType.ON) {
+                    if (onOffCommand == OnOffType.ON) {
                         targetValueSet = turnOnValue;
                     } else {
                         if (dynamicTurnOnValue) {
@@ -97,16 +96,15 @@ public class DimmerThingHandler extends DmxThingHandler {
                         }
                         targetValueSet = turnOffValue;
                     }
-                } else if (command instanceof IncreaseDecreaseType) {
-                    if (isDimming && ((IncreaseDecreaseType) command).equals(IncreaseDecreaseType.INCREASE)) {
+                } else if (command instanceof IncreaseDecreaseType increaseDecreaseCommand) {
+                    if (isDimming && increaseDecreaseCommand.equals(IncreaseDecreaseType.INCREASE)) {
                         logger.trace("stopping fade in thing {}", this.thing.getUID());
                         channels.forEach(DmxChannel::clearAction);
                         isDimming = false;
                         return;
                     } else {
                         logger.trace("starting {} fade in thing {}", command, this.thing.getUID());
-                        targetValueSet = ((IncreaseDecreaseType) command).equals(IncreaseDecreaseType.INCREASE)
-                                ? turnOnValue
+                        targetValueSet = increaseDecreaseCommand.equals(IncreaseDecreaseType.INCREASE) ? turnOnValue
                                 : turnOffValue;
                         targetValueSet.setFadeTime(dimTime);
                         isDimming = true;
@@ -178,7 +176,7 @@ public class DimmerThingHandler extends DmxThingHandler {
         dimTime = configuration.dimtime;
         logger.trace("setting dimTime to {} ms in {}", fadeTime, this.thing.getUID());
 
-        String turnOnValueString = String.valueOf(fadeTime) + ":" + configuration.turnonvalue + ":-1";
+        String turnOnValueString = fadeTime + ":" + configuration.turnonvalue + ":-1";
 
         ValueSet turnOnValue = ValueSet.fromString(turnOnValueString);
         if (!turnOnValue.isEmpty()) {
@@ -194,7 +192,7 @@ public class DimmerThingHandler extends DmxThingHandler {
 
         dynamicTurnOnValue = configuration.dynamicturnonvalue;
 
-        String turnOffValueString = String.valueOf(fadeTime) + ":" + configuration.turnoffvalue + ":-1";
+        String turnOffValueString = fadeTime + ":" + configuration.turnoffvalue + ":-1";
         ValueSet turnOffValue = ValueSet.fromString(turnOffValueString);
         if (!turnOffValue.isEmpty()) {
             this.turnOffValue = turnOffValue;
