@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,14 +12,16 @@
  */
 package org.openhab.binding.knx.internal;
 
-import static java.util.stream.Collectors.toSet;
-
-import java.util.Collections;
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.thing.ThingTypeUID;
+import org.openhab.core.thing.type.ChannelTypeUID;
 
 /**
  * The {@link KNXBindingConstants} class defines common constants, which are
@@ -31,6 +33,10 @@ import org.openhab.core.thing.ThingTypeUID;
 public class KNXBindingConstants {
 
     public static final String BINDING_ID = "knx";
+
+    // Global config
+    public static final String CONFIG_DISABLE_UOM = "disableUoM";
+    public static boolean disableUoM = false;
 
     // Thing Type UIDs
     public static final ThingTypeUID THING_TYPE_IP_BRIDGE = new ThingTypeUID(BINDING_ID, "ip");
@@ -57,10 +63,13 @@ public class KNXBindingConstants {
     public static final String PORT_NUMBER = "portNumber";
     public static final String SERIAL_PORT = "serialPort";
     public static final String USE_CEMI = "useCemi";
+    public static final String KEYRING_FILE = "keyringFile";
+    public static final String KEYRING_PASSWORD = "keyringPassword";
     public static final String ROUTER_BACKBONE_GROUP_KEY = "routerBackboneGroupKey";
     public static final String TUNNEL_USER_ID = "tunnelUserId";
     public static final String TUNNEL_USER_PASSWORD = "tunnelUserPassword";
     public static final String TUNNEL_DEVICE_AUTHENTICATION = "tunnelDeviceAuthentication";
+    public static final String TUNNEL_SOURCE_ADDRESS = "tunnelSourceAddress";
 
     // The default multicast ip address (see <a
     // href="http://www.iana.org/assignments/multicast-addresses/multicast-addresses.xml">iana</a> EIBnet/IP
@@ -84,7 +93,11 @@ public class KNXBindingConstants {
     public static final String CHANNEL_SWITCH = "switch";
     public static final String CHANNEL_SWITCH_CONTROL = "switch-control";
 
-    public static final Set<String> CONTROL_CHANNEL_TYPES = Collections.unmodifiableSet(Stream.of(CHANNEL_COLOR_CONTROL, //
+    public static final ChannelTypeUID CHANNEL_CONTACT_CONTROL_UID = new ChannelTypeUID(BINDING_ID,
+            CHANNEL_CONTACT_CONTROL);
+
+    public static final Set<String> CONTROL_CHANNEL_TYPES = Set.of( //
+            CHANNEL_COLOR_CONTROL, //
             CHANNEL_CONTACT_CONTROL, //
             CHANNEL_DATETIME_CONTROL, //
             CHANNEL_DIMMER_CONTROL, //
@@ -92,7 +105,7 @@ public class KNXBindingConstants {
             CHANNEL_ROLLERSHUTTER_CONTROL, //
             CHANNEL_STRING_CONTROL, //
             CHANNEL_SWITCH_CONTROL //
-    ).collect(toSet()));
+    );
 
     public static final String CHANNEL_RESET = "reset";
 
@@ -105,4 +118,26 @@ public class KNXBindingConstants {
     public static final String STOP_MOVE_GA = "stopMove";
     public static final String SWITCH_GA = "switch";
     public static final String UP_DOWN_GA = "upDown";
+
+    public static final Map<Integer, String> MANUFACTURER_MAP = readManufacturerMap();
+
+    private static Map<Integer, String> readManufacturerMap() {
+        ClassLoader classLoader = KNXBindingConstants.class.getClassLoader();
+        if (classLoader == null) {
+            return Map.of();
+        }
+
+        try (InputStream is = classLoader.getResourceAsStream("manufacturer.properties")) {
+            if (is == null) {
+                return Map.of();
+            }
+
+            Properties properties = new Properties();
+            properties.load(is);
+            return properties.entrySet().stream()
+                    .collect(Collectors.toMap(e -> Integer.parseInt((String) e.getKey()), e -> (String) e.getValue()));
+        } catch (IOException e) {
+            return Map.of();
+        }
+    }
 }
