@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,7 +15,6 @@ package org.openhab.binding.meater.internal.handler;
 import static org.openhab.binding.meater.internal.MeaterBindingConstants.*;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -29,8 +28,8 @@ import org.openhab.binding.meater.internal.MeaterBridgeConfiguration;
 import org.openhab.binding.meater.internal.api.MeaterRestAPI;
 import org.openhab.binding.meater.internal.discovery.MeaterDiscoveryService;
 import org.openhab.binding.meater.internal.dto.MeaterProbeDTO;
+import org.openhab.binding.meater.internal.exceptions.MeaterException;
 import org.openhab.core.i18n.LocaleProvider;
-import org.openhab.core.i18n.TranslationProvider;
 import org.openhab.core.thing.Bridge;
 import org.openhab.core.thing.ChannelUID;
 import org.openhab.core.thing.ThingStatus;
@@ -56,11 +55,10 @@ public class MeaterBridgeHandler extends BaseBridgeHandler {
 
     private final Logger logger = LoggerFactory.getLogger(MeaterBridgeHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_BRIDGE);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_BRIDGE);
 
     private final Gson gson;
     private final HttpClient httpClient;
-    private final TranslationProvider i18nProvider;
     private final LocaleProvider localeProvider;
     private final Map<String, MeaterProbeDTO.Device> meaterProbeThings = new ConcurrentHashMap<>();
 
@@ -68,12 +66,10 @@ public class MeaterBridgeHandler extends BaseBridgeHandler {
     private @Nullable MeaterRestAPI api;
     private @Nullable ScheduledFuture<?> refreshJob;
 
-    public MeaterBridgeHandler(Bridge bridge, HttpClient httpClient, Gson gson, TranslationProvider i18nProvider,
-            LocaleProvider localeProvider) {
+    public MeaterBridgeHandler(Bridge bridge, HttpClient httpClient, Gson gson, LocaleProvider localeProvider) {
         super(bridge);
         this.httpClient = httpClient;
         this.gson = gson;
-        this.i18nProvider = i18nProvider;
         this.localeProvider = localeProvider;
     }
 
@@ -101,7 +97,7 @@ public class MeaterBridgeHandler extends BaseBridgeHandler {
 
     @Override
     public Collection<Class<? extends ThingHandlerService>> getServices() {
-        return Collections.singleton(MeaterDiscoveryService.class);
+        return Set.of(MeaterDiscoveryService.class);
     }
 
     @Override
@@ -110,23 +106,24 @@ public class MeaterBridgeHandler extends BaseBridgeHandler {
         meaterProbeThings.clear();
     }
 
-    private boolean refreshAndUpdateStatus() {
+    private void refreshAndUpdateStatus() {
         MeaterRestAPI localAPI = api;
-        if (localAPI != null) {
-            if (localAPI.refresh(meaterProbeThings)) {
-                updateStatus(ThingStatus.ONLINE);
-                getThing().getThings().stream().forEach(thing -> {
-                    MeaterHandler handler = (MeaterHandler) thing.getHandler();
-                    if (handler != null) {
-                        handler.update();
-                    }
-                });
-                return true;
-            } else {
-                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR);
-            }
+        if (localAPI == null) {
+            return;
         }
-        return false;
+
+        try {
+            localAPI.refresh(meaterProbeThings);
+            updateStatus(ThingStatus.ONLINE);
+            getThing().getThings().stream().forEach(thing -> {
+                MeaterHandler handler = (MeaterHandler) thing.getHandler();
+                if (handler != null) {
+                    handler.update();
+                }
+            });
+        } catch (MeaterException e) {
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, e.getMessage());
+        }
     }
 
     private void startAutomaticRefresh() {
@@ -154,13 +151,5 @@ public class MeaterBridgeHandler extends BaseBridgeHandler {
                 refreshAndUpdateStatus();
             }
         }
-    }
-
-    public TranslationProvider getI18nProvider() {
-        return i18nProvider;
-    }
-
-    public LocaleProvider getLocaleProvider() {
-        return localeProvider;
     }
 }
