@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,7 +18,6 @@ import java.net.URI;
 import java.time.ZonedDateTime;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.ws.rs.core.UriBuilder;
 
@@ -81,20 +80,21 @@ public class SecurityApi extends RestManager {
         throw new NetatmoException("home should not be null");
     }
 
-    public List<HomeEvent> getHomeEvents(String homeId, @Nullable ZonedDateTime freshestEventTime)
-            throws NetatmoException {
+    public List<HomeEvent> getHomeEvents(String homeId, ZonedDateTime freshestEventTime) throws NetatmoException {
         List<HomeEvent> events = getEvents(PARAM_HOME_ID, homeId);
 
-        // we have to rewind to the latest event just after oldestKnown
-        HomeEvent oldestRetrieved = events.get(events.size() - 1);
-        while (freshestEventTime != null && oldestRetrieved.getTime().isAfter(freshestEventTime)) {
-            events.addAll(getEvents(PARAM_HOME_ID, homeId, PARAM_EVENT_ID, oldestRetrieved.getId()));
-            oldestRetrieved = events.get(events.size() - 1);
+        // we have to rewind to the latest event just after freshestEventTime
+        if (events.size() > 0) {
+            HomeEvent oldestRetrieved = events.get(events.size() - 1);
+            while (oldestRetrieved.getTime().isAfter(freshestEventTime)) {
+                events.addAll(getEvents(PARAM_HOME_ID, homeId, PARAM_EVENT_ID, oldestRetrieved.getId()));
+                oldestRetrieved = events.get(events.size() - 1);
+            }
         }
 
-        // Remove unneeded events being before oldestKnown
-        return events.stream().filter(event -> freshestEventTime == null || event.getTime().isAfter(freshestEventTime))
-                .sorted(Comparator.comparing(HomeEvent::getTime).reversed()).collect(Collectors.toList());
+        // Remove unneeded events being before freshestEventTime
+        return events.stream().filter(event -> event.getTime().isAfter(freshestEventTime))
+                .sorted(Comparator.comparing(HomeEvent::getTime).reversed()).toList();
     }
 
     public List<HomeEvent> getPersonEvents(String homeId, String personId) throws NetatmoException {
