@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -17,15 +17,16 @@ import static org.openhab.binding.netatmo.internal.utils.ChannelTypeUtils.toRawT
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
+import org.openhab.binding.netatmo.internal.api.data.NetatmoConstants.FeatureArea;
 import org.openhab.binding.netatmo.internal.api.dto.HomeData;
+import org.openhab.binding.netatmo.internal.api.dto.HomeDataPerson;
 import org.openhab.binding.netatmo.internal.api.dto.HomeStatusPerson;
 import org.openhab.binding.netatmo.internal.api.dto.NAHomeStatus.HomeStatus;
 import org.openhab.binding.netatmo.internal.api.dto.NAObject;
-import org.openhab.binding.netatmo.internal.deserialization.NAObjectMap;
 import org.openhab.core.library.types.DecimalType;
 import org.openhab.core.types.State;
 import org.openhab.core.types.UnDefType;
@@ -50,32 +51,25 @@ public class SecurityChannelHelper extends ChannelHelper {
     @Override
     public void setNewData(@Nullable NAObject data) {
         super.setNewData(data);
-        if (data instanceof HomeData) {
-            HomeData homeData = (HomeData) data;
-            knownIds = homeData.getPersons().values().stream().filter(person -> person.isKnown()).map(p -> p.getId())
-                    .collect(Collectors.toList());
-        }
-        if (data instanceof HomeStatus) {
-            HomeStatus status = (HomeStatus) data;
-            NAObjectMap<HomeStatusPerson> allPersons = status.getPersons();
-            List<HomeStatusPerson> present = allPersons.values().stream().filter(p -> !p.isOutOfSight())
-                    .collect(Collectors.toList());
+        if (data instanceof HomeData.Security securityData) {
+            knownIds = securityData.getKnownPersons().stream().map(HomeDataPerson::getId).toList();
+        } else if (data instanceof HomeStatus status && status.appliesTo(FeatureArea.SECURITY)) {
+            List<String> present = status.getPersons().values().stream().filter(HomeStatusPerson::atHome)
+                    .map(HomeStatusPerson::getId).toList();
 
             persons = present.size();
-            unknowns = present.stream().filter(person -> !knownIds.contains(person.getId())).count();
+            unknowns = present.stream().filter(Predicate.not(knownIds::contains)).count();
         }
     }
 
     @Override
     protected @Nullable State internalGetOther(String channelId) {
-        switch (channelId) {
-            case CHANNEL_PERSON_COUNT:
-                return persons != -1 ? new DecimalType(persons) : UnDefType.NULL;
-            case CHANNEL_UNKNOWN_PERSON_COUNT:
-                return unknowns != -1 ? new DecimalType(unknowns) : UnDefType.NULL;
-            case CHANNEL_UNKNOWN_PERSON_PICTURE:
-                return unknownSnapshot != null ? toRawType(unknownSnapshot) : UnDefType.NULL;
-        }
-        return null;
+        return switch (channelId) {
+            case CHANNEL_PERSON_COUNT -> persons != -1 ? new DecimalType(persons) : UnDefType.NULL;
+            case CHANNEL_UNKNOWN_PERSON_COUNT -> unknowns != -1 ? new DecimalType(unknowns) : UnDefType.NULL;
+            case CHANNEL_UNKNOWN_PERSON_PICTURE ->
+                unknownSnapshot != null ? toRawType(unknownSnapshot) : UnDefType.NULL;
+            default -> null;
+        };
     }
 }
