@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,6 @@ package org.openhab.binding.satel.internal.handler;
 
 import static org.openhab.binding.satel.internal.SatelBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 
@@ -44,7 +43,7 @@ import org.slf4j.LoggerFactory;
 @NonNullByDefault
 public class SatelShutterHandler extends SatelStateThingHandler {
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_SHUTTER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_SHUTTER);
 
     private final Logger logger = LoggerFactory.getLogger(SatelShutterHandler.class);
 
