@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,10 +14,7 @@ package org.openhab.binding.siemensrds.internal;
 
 import static org.openhab.binding.siemensrds.internal.RdsBindingConstants.*;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Hashtable;
 import java.util.Map;
 import java.util.Set;
@@ -44,8 +41,7 @@ import org.osgi.service.component.annotations.Component;
 @Component(configurationPid = "binding.siemensrds", service = ThingHandlerFactory.class)
 public class RdsHandlerFactory extends BaseThingHandlerFactory {
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections
-            .unmodifiableSet(new HashSet<>(Arrays.asList(THING_TYPE_CLOUD, THING_TYPE_RDS)));
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_CLOUD, THING_TYPE_RDS);
 
     private final Map<ThingUID, ServiceRegistration<?>> discos = new HashMap<>();
 
@@ -58,8 +54,8 @@ public class RdsHandlerFactory extends BaseThingHandlerFactory {
     protected @Nullable ThingHandler createHandler(Thing thing) {
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
 
-        if ((thingTypeUID.equals(THING_TYPE_CLOUD)) && (thing instanceof Bridge)) {
-            RdsCloudHandler handler = new RdsCloudHandler((Bridge) thing);
+        if ((thingTypeUID.equals(THING_TYPE_CLOUD)) && (thing instanceof Bridge bridge)) {
+            RdsCloudHandler handler = new RdsCloudHandler(bridge);
             createDiscoveryService(handler);
             return handler;
         }
@@ -73,8 +69,8 @@ public class RdsHandlerFactory extends BaseThingHandlerFactory {
 
     @Override
     protected synchronized void removeHandler(ThingHandler handler) {
-        if (handler instanceof RdsCloudHandler) {
-            destroyDiscoveryService((RdsCloudHandler) handler);
+        if (handler instanceof RdsCloudHandler cloudHandler) {
+            destroyDiscoveryService(cloudHandler);
         }
     }
 
