@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2023 Contributors to the openHAB project
+ * Copyright (c) 2010-2024 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -57,7 +57,7 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
 
     private final Logger logger = LoggerFactory.getLogger(WemoDimmerHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Collections.singleton(THING_TYPE_DIMMER);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_DIMMER);
 
     private final Object jobLock = new Object();
 
@@ -157,8 +157,8 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                             State brightnessState = new PercentType(currentBrightness);
                             updateState(CHANNEL_BRIGHTNESS, brightnessState);
                         }
-                    } else if (command instanceof PercentType) {
-                        int newBrightness = ((PercentType) command).intValue();
+                    } else if (command instanceof PercentType percentCommand) {
+                        int newBrightness = percentCommand.intValue();
                         value = String.valueOf(newBrightness);
                         currentBrightness = newBrightness;
                         argument = "brightness";
@@ -217,20 +217,36 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                         int commandValue = Integer.valueOf(String.valueOf(command));
                         commandValue = commandValue * 60;
                         String commandString = String.valueOf(commandValue);
-                        value = "<BinaryState></BinaryState>" + "<Duration></Duration>" + "<EndAction></EndAction>"
-                                + "<brightness></brightness>" + "<fader>" + commandString + ":-1:1:0:0</fader>"
-                                + "<UDN></UDN>";
+                        value = """
+                                <BinaryState></BinaryState>\
+                                <Duration></Duration>\
+                                <EndAction></EndAction>\
+                                <brightness></brightness>\
+                                <fader>\
+                                """ + commandString + ":-1:1:0:0</fader><UDN></UDN>";
                         setBinaryState(action, argument, value);
                     }
                     break;
                 case CHANNEL_FADER_ENABLED:
                     argument = "Fader";
                     if (command.equals(OnOffType.ON)) {
-                        value = "<BinaryState></BinaryState>" + "<Duration></Duration>" + "<EndAction></EndAction>"
-                                + "<brightness></brightness>" + "<fader>600:-1:1:0:0</fader>" + "<UDN></UDN>";
+                        value = """
+                                <BinaryState></BinaryState>\
+                                <Duration></Duration>\
+                                <EndAction></EndAction>\
+                                <brightness></brightness>\
+                                <fader>600:-1:1:0:0</fader>\
+                                <UDN></UDN>\
+                                """;
                     } else if (command.equals(OnOffType.OFF)) {
-                        value = "<BinaryState></BinaryState>" + "<Duration></Duration>" + "<EndAction></EndAction>"
-                                + "<brightness></brightness>" + "<fader>600:-1:0:0:0</fader>" + "<UDN></UDN>";
+                        value = """
+                                <BinaryState></BinaryState>\
+                                <Duration></Duration>\
+                                <EndAction></EndAction>\
+                                <brightness></brightness>\
+                                <fader>600:-1:0:0:0</fader>\
+                                <UDN></UDN>\
+                                """;
                     }
                     setBinaryState(action, argument, value);
                     break;
@@ -253,14 +269,23 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                     }
                     if (faderSeconds != null && faderEnabled != null) {
                         if (OnOffType.ON.equals(command)) {
-                            value = "<BinaryState></BinaryState>" + "<Duration></Duration>" + "<EndAction></EndAction>"
-                                    + "<brightness></brightness>" + "<fader>" + faderSeconds + ":" + timeStamp + ":"
-                                    + faderEnabled + ":0:0</fader>" + "<UDN></UDN>";
+                            value = """
+                                    <BinaryState></BinaryState>\
+                                    <Duration></Duration>\
+                                    <EndAction></EndAction>\
+                                    <brightness></brightness>\
+                                    <fader>\
+                                    """ + faderSeconds + ":" + timeStamp + ":" + faderEnabled + ":0:0</fader>"
+                                    + "<UDN></UDN>";
                             updateState(CHANNEL_STATE, OnOffType.ON);
                         } else if (OnOffType.OFF.equals(command)) {
-                            value = "<BinaryState></BinaryState>" + "<Duration></Duration>" + "<EndAction></EndAction>"
-                                    + "<brightness></brightness>" + "<fader>" + faderSeconds + ":-1:" + faderEnabled
-                                    + ":0:0</fader>" + "<UDN></UDN>";
+                            value = """
+                                    <BinaryState></BinaryState>\
+                                    <Duration></Duration>\
+                                    <EndAction></EndAction>\
+                                    <brightness></brightness>\
+                                    <fader>\
+                                    """ + faderSeconds + ":-1:" + faderEnabled + ":0:0</fader>" + "<UDN></UDN>";
                         }
                     }
                     setBinaryState(action, argument, value);
@@ -281,8 +306,8 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                 case CHANNEL_NIGHT_MODE_BRIGHTNESS:
                     action = "ConfigureNightMode";
                     argument = "NightModeConfiguration";
-                    if (command instanceof PercentType) {
-                        int newBrightness = ((PercentType) command).intValue();
+                    if (command instanceof PercentType percentCommand) {
+                        int newBrightness = percentCommand.intValue();
                         String newNightModeBrightness = String.valueOf(newBrightness);
                         value = "&lt;startTime&gt;0&lt;/startTime&gt; \\n&lt;nightMode&gt;" + currentNightModeState
                                 + "&lt;/nightMode&gt; \\n&lt;endTime&gt;23400&lt;/endTime&gt; \\n&lt;nightModeBrightness&gt;"
@@ -330,7 +355,7 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
             switch (variable) {
                 case "BinaryState":
                     if (oldBinaryState == null || !oldBinaryState.equals(value)) {
-                        State state = "0".equals(value) ? OnOffType.OFF : OnOffType.ON;
+                        State state = OnOffType.from(!"0".equals(value));
                         logger.debug("State '{}' for device '{}' received", state, getThing().getUID());
                         updateState(CHANNEL_BRIGHTNESS, state);
                         if (state.equals(OnOffType.OFF)) {
@@ -361,7 +386,7 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                         updateState(CHANNEL_FADER_COUNT_DOWN_TIME, faderMinutes);
                     }
                     if (splitFader[1] != null) {
-                        State isTimerRunning = splitFader[1].equals("-1") ? OnOffType.OFF : OnOffType.ON;
+                        State isTimerRunning = OnOffType.from(!"-1".equals(splitFader[1]));
                         logger.debug("isTimerRunning '{}' for device '{}' received", isTimerRunning,
                                 getThing().getUID());
                         updateState(CHANNEL_TIMER_START, isTimerRunning);
@@ -370,14 +395,14 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
                         }
                     }
                     if (splitFader[2] != null) {
-                        State isFaderEnabled = splitFader[1].equals("0") ? OnOffType.OFF : OnOffType.ON;
+                        State isFaderEnabled = OnOffType.from(!"0".equals(splitFader[1]));
                         logger.debug("isFaderEnabled '{}' for device '{}' received", isFaderEnabled,
                                 getThing().getUID());
                         updateState(CHANNEL_FADER_ENABLED, isFaderEnabled);
                     }
                     break;
                 case "nightMode":
-                    State nightModeState = "0".equals(value) ? OnOffType.OFF : OnOffType.ON;
+                    State nightModeState = OnOffType.from(!"0".equals(value));
                     currentNightModeState = value;
                     logger.debug("nightModeState '{}' for device '{}' received", nightModeState, getThing().getUID());
                     updateState(CHANNEL_NIGHT_MODE, nightModeState);
@@ -478,8 +503,7 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
             return null;
         }
         ZonedDateTime zoned = ZonedDateTime.ofInstant(Instant.ofEpochSecond(value), TimeZone.getDefault().toZoneId());
-        State dateTimeState = new DateTimeType(zoned);
-        return dateTimeState;
+        return new DateTimeType(zoned);
     }
 
     public void setBinaryState(String action, String argument, String value) {
@@ -490,10 +514,14 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
         }
         try {
             String soapHeader = "\"urn:Belkin:service:basicevent:1#SetBinaryState\"";
-            String content = "<?xml version=\"1.0\"?>"
-                    + "<s:Envelope xmlns:s=\"http://schemas.xmlsoap.org/soap/envelope/\" s:encodingStyle=\"http://schemas.xmlsoap.org/soap/encoding/\">"
-                    + "<s:Body>" + "<u:" + action + " xmlns:u=\"urn:Belkin:service:basicevent:1\">" + "<" + argument
-                    + ">" + value + "</" + argument + ">" + "</u:" + action + ">" + "</s:Body>" + "</s:Envelope>";
+            String content = """
+                    <?xml version="1.0"?>\
+                    <s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">\
+                    <s:Body>\
+                    <u:\
+                    """
+                    + action + " xmlns:u=\"urn:Belkin:service:basicevent:1\">" + "<" + argument + ">" + value + "</"
+                    + argument + ">" + "</u:" + action + ">" + "</s:Body>" + "</s:Envelope>";
 
             wemoHttpCaller.executeCall(wemoURL, soapHeader, content);
             updateStatus(ThingStatus.ONLINE);
@@ -512,10 +540,13 @@ public class WemoDimmerHandler extends WemoBaseThingHandler {
         }
         try {
             String soapHeader = "\"urn:Belkin:service:basicevent:1#SetBinaryState\"";
-            String content = "<?xml version=\"1.0\"?>"
-                    + "<s:Envelope xmlns:s=\"http://schemas.xmlsoap.org/soap/envelope/\" s:encodingStyle=\"http://schemas.xmlsoap.org/soap/encoding/\">"
-                    + "<s:Body>" + "<u:SetBinaryState xmlns:u=\"urn:Belkin:service:basicevent:1\">" + value
-                    + "</u:SetBinaryState>" + "</s:Body>" + "</s:Envelope>";
+            String content = """
+                    <?xml version="1.0"?>\
+                    <s:Envelope xmlns:s="http://schemas.xmlsoap.org/soap/envelope/" s:encodingStyle="http://schemas.xmlsoap.org/soap/encoding/">\
+                    <s:Body>\
+                    <u:SetBinaryState xmlns:u="urn:Belkin:service:basicevent:1">\
+                    """
+                    + value + "</u:SetBinaryState>" + "</s:Body>" + "</s:Envelope>";
             wemoHttpCaller.executeCall(wemoURL, soapHeader, content);
             updateStatus(ThingStatus.ONLINE);
         } catch (Exception e) {
